fix: patient view layout broken on wide screens

--- a/src/app/appointment/patient.component.scss
+++ b/src/app/appointment/patient.component.scss
@@ -1,1 +1,6 @@
 @import 'appointment.style';
+
+.force-single-line-hotfix {
+  width: 700px;
+  display: inline-block;
+}
